set dockerize switch

--- a/src/Gateways/WebGateway/WebGateway/Web.config
+++ b/src/Gateways/WebGateway/WebGateway/Web.config
@@ -8,7 +8,7 @@
     <section name="piraeus" type="Piraeus.Configuration.PiraeusSection, Piraeus.Configuration" />
   </configSections>
   <appSettings>
-    <add key="dockerize" value="false" />
+    <add key="dockerize" value="true" />
     <add key="dnsHostEntry" value="orleans-silo" />
     
     
