--- a/src/Docker/docker-compose-azure.yml
+++ b/src/Docker/docker-compose-azure.yml
@@ -1,3 +1,4 @@
+
 version: '3.1'
 services:
   webgateway:
@@ -47,6 +48,7 @@ services:
       - ORLEANS_MAXMEMORY_STORAGE_GRAINS=1000000
       - ORLEANS_DNS_HOSTNAME=orleans-silo
       - ORLEANS_AUDIT_TABLENAME=audit
+      - SERVICEPOINT_CORE_FACTOR=12
     ports:
       - "11111:11111/tcp"
       - "30000:30000/tcp"
