--- a/src/Docker/docker-compose-local.yml
+++ b/src/Docker/docker-compose-local.yml
@@ -40,6 +40,7 @@ services:
       - ORLEANS_MAXMEMORY_STORAGE_GRAINS=1000000
       - ORLEANS_DNS_HOSTNAME=orleans-silo
       - ORLEANS_AUDIT_TABLENAME=audit
+      - SERVICEPOINT_CORE_FACTOR=12
     ports:
       - "11111:11111/tcp"
       - "30000:30000/tcp"
