--- a/src/Docker/docker-compose-azure.yml
+++ b/src/Docker/docker-compose-azure.yml
@@ -1,4 +1,3 @@
-
 version: '3.1'
 services:
   webgateway:
@@ -7,6 +6,8 @@ services:
     container_name: web-server
     image: skunklab/webgateway
     restart: always
+     volumes:
+       - c:\piraeus:c:\inetpub\wwwroot\logs
     ports:
       - "80:80/tcp"
     links:
