--- a/src/Docker/docker-compose-azure.yml
+++ b/src/Docker/docker-compose-azure.yml
@@ -34,22 +34,13 @@ services:
     depends_on:
       - orleans-silo
   orleans-silo:
+    env_file:
+      - gateway-config.env
     container_name: orleans-silo
     image: skunklab/orleans-silo
     restart: always
     volumes:
-       - c:\piraeus:c:\app\logs
-    environment:
-      - ORLEANS_PROVIDER_DATACONNECTIONSTRING=#ORLEANS_BLOB_STORAGE_CONNECTIONSTRING
-      - ORLEANS_LIVENESS_DATACONNECTIONSTRING=#ORLEANS_BLOB_STORAGE_CONNECTIONSTRING
-      - ORLEANS_AUDIT_DATACONNECTIONSTRING=#AUDIT_BLOB_STORAGE_CONNECTIONSTRING
-      - ORLEANS_DEPLOYMENT_ID=PiraeusDeploymentAzure      
-      - ORLEANS_STORAGE_PROVIDER_TYPE=AzureBlobStore
-      - ORLEANS_STORAGE_CONTAINER_NAME=orleans
-      - ORLEANS_MAXMEMORY_STORAGE_GRAINS=1000000
-      - ORLEANS_DNS_HOSTNAME=orleans-silo
-      - ORLEANS_AUDIT_TABLENAME=audit
-      - SERVICEPOINT_CORE_FACTOR=12
+       - c:\piraeus:c:\app\logs    
     ports:
       - "11111:11111/tcp"
       - "30000:30000/tcp"
