--- a/src/Docker/gateway-config.env
+++ b/src/Docker/gateway-config.env
@@ -1,7 +1,9 @@
+#Orleans Environment Variables
+
 ORLEANS_PROVIDER_DATACONNECTIONSTRING=#ORLEANS_BLOB_STORAGE_CONNECTIONSTRING
 ORLEANS_LIVENESS_DATACONNECTIONSTRING=#ORLEANS_BLOB_STORAGE_CONNECTIONSTRING
 ORLEANS_AUDIT_DATACONNECTIONSTRING=#AUDIT_BLOB_STORAGE_CONNECTIONSTRING
-ORLEANS_DEPLOYMENT_ID=PiraeusDeploymentAzure      
+ORLEANS_DEPLOYMENT_ID=PiraeusDeploymentAzure
 ORLEANS_STORAGE_PROVIDER_TYPE=AzureBlobStore
 ORLEANS_STORAGE_CONTAINER_NAME=orleans
 ORLEANS_MAXMEMORY_STORAGE_GRAINS=1000000
