--- a/src/Docker/gateway-config.env
+++ b/src/Docker/gateway-config.env
@@ -1,3 +1,5 @@
+#Environment Variables Orleans
+
 ORLEANS_PROVIDER_DATACONNECTIONSTRING=DefaultEndpointsProtocol=#ORLEANS_BLOB_STORAGE_CONNECTIONSTRING
 ORLEANS_LIVENESS_DATACONNECTIONSTRING=DefaultEndpointsProtocol=#ORLEANS_BLOB_STORAGE_CONNECTIONSTRING
 ORLEANS_AUDIT_DATACONNECTIONSTRING=#AUDIT_BLOB_STORAGE_CONNECTIONSTRING
