user audit table

--- a/src/Docker/gateway-config.env
+++ b/src/Docker/gateway-config.env
@@ -1,3 +1,4 @@
+
 #Environment Variables Orleans
 
 ORLEANS_PROVIDER_DATACONNECTIONSTRING=#ORLEANS_BLOB_STORAGE_CONNECTIONSTRING
@@ -26,6 +27,8 @@ GATEWAY_ORLEANS_SILO_DNS_HOSTNAME=orleans-silo
 GATEWAY_TCP_SERVER_DNS_HOSTNAME=tcp-server
 
 #Environment Variables for Channels
+
+USER_AUDIT_TABLENAME=userlog
 
 WEBSOCKET_MAX_INCOMING_MESSAGE_SIZE=4194304 
 WEBSOCKET_RECEIVE_LOOP_BUFFER_SIZE=8192 
